--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,13 @@
     <artifactId>phoenix_api</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.2</version>
+        </dependency>
+
+    </dependencies>
 
 </project>
