--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,15 +1,18 @@
-### direct log messages to stdout ###
-log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.Target=System.err
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
+### 根logger设置 ###
+log4j.rootLogger = INFO,console,file
 
-### direct messages to file mylog.log ###
-log4j.appender.file=org.apache.log4j.FileAppender
+### 输出信息到控制台 ###
+log4j.appender.console=org.apache.log4j.ConsoleAppender
+log4j.appender.console.Target=System.out
+log4j.appender.console.layout=org.apache.log4j.PatternLayout
+log4j.appender.console.Threshold = INFO
+log4j.appender.console.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
+
+### 输出INFO级别以上的日志文件设置 ###
+log4j.appender.file=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.file.File=src/test/log/my_log.log
+log4j.appender.file.Append = true
+log4j.appender.file.Threshold = INFO
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
 
-### set log levels - for more verbose logging change 'info' to 'debug' ###
-### fatal error warn info debug trace
-log4j.rootLogger=debug, stdout
